# LowCostAirlinesMonitor

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: admin.py  backends.py  forms.py  middleware.py  models.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/airports/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/airports/migrations/: 0001_initial.py  0002_seed_airports.py
apps/dashboard/: services.py  urls.py  views.py
apps/notifications/: services.py  tasks.py
apps/providers/: admin.py  bootstrap.py  models.py  services.py
apps/providers/adapters/: base.py  ryanair.py  wizzair.py
apps/providers/migrations/: 0001_initial.py  0002_seed_default_providers.py  (+3 more)
apps/searches/: admin.py  forms.py  models.py  services.py  tasks.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  PRODUCT_REQUIREMENTS.md  ROADMAP.md  SECURITY.md  TESTING.md
src/: asgi.py  celery.py  settings.py  urls.py
static/css/: app.css
templates/: base.html
templates/accounts/: login.html  password_change.html  profile.html  register_request.html
templates/dashboard/: home.html  subscription_detail.html
tests/: conftest.py  test_accounts_approval.py  test_accounts_auth.py  test_airports.py  test_dashboard_actions.py  test_dashboard_best_offers.py  test_notifications_tasks.py  test_providers_bootstrap.py  test_providers_runtime_status.py  test_ryanair_adapter.py  test_searches_polling.py  test_wizzair_adapter.py
(+2 files in other folders)
